WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
24060
Fix up to match with the CanvasPixelArray reintroduction
https://bugs.webkit.org/show_bug.cgi?id=24060
Summary
Fix up to match with the CanvasPixelArray reintroduction
Dimitri Glazkov (Google)
Reported
2009-02-20 08:15:33 PST
In
http://trac.webkit.org/changeset/40089
, CanvasPixelArray is back, which creates the need for this change.
Attachments
Fix up to accommodate for CanvasPixelArray return, v1.
(1.76 KB, patch)
2009-02-20 08:46 PST
,
Dimitri Glazkov (Google)
eric
: review-
Details
Formatted Diff
Diff
Fix up to accommodate for CanvasPixelArray return, v2
(1.77 KB, patch)
2009-02-20 13:12 PST
,
Dimitri Glazkov (Google)
eric
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dimitri Glazkov (Google)
Comment 1
2009-02-20 08:46:44 PST
Created
attachment 27831
[details]
Fix up to accommodate for CanvasPixelArray return, v1. WebCore/ChangeLog | 11 +++++++++++ WebCore/platform/graphics/skia/ImageBufferSkia.cpp | 4 ++-- 2 files changed, 13 insertions(+), 2 deletions(-)
Eric Seidel (no email)
Comment 2
2009-02-20 10:00:58 PST
Comment on
attachment 27831
[details]
Fix up to accommodate for CanvasPixelArray return, v1. source->data()->data()-data() Wrong.
Dimitri Glazkov (Google)
Comment 3
2009-02-20 13:12:13 PST
Created
attachment 27837
[details]
Fix up to accommodate for CanvasPixelArray return, v2 WebCore/ChangeLog | 11 +++++++++++ WebCore/platform/graphics/skia/ImageBufferSkia.cpp | 4 ++-- 2 files changed, 13 insertions(+), 2 deletions(-)
Eric Seidel (no email)
Comment 4
2009-02-20 13:16:24 PST
Comment on
attachment 27837
[details]
Fix up to accommodate for CanvasPixelArray return, v2 Right!
Dimitri Glazkov (Google)
Comment 5
2009-02-21 20:24:33 PST
Landed as
http://trac.webkit.org/changeset/41119
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug