2009-02-19  Dimitri Glazkov  <dglazkov@chromium.org>

Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=24060
        Fix up to accommodate for CanvasPixelArray return.

        * platform/graphics/skia/ImageBufferSkia.cpp:
        (WebCore::ImageBuffer::getImageData): Added an extra data() to call.
        (WebCore::ImageBuffer::putImageData): Ditto.

Canonical link: https://commits.webkit.org/33201@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41119 268f45cc-cd09-0410-ab3c-d52691b4dbfc